# lib-iamf-so

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/iamf/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakeListsT.txt  native-lib.cpp
app/src/main/cpp/dep_external/include/resonance/: iamf_resonance_api.h
app/src/main/cpp/dep_external/include/wav/: dep_wavwriter.h
app/src/main/cpp/dep_external/src/binaural/iamf2bear/: CMakeLists.txt  iamf2bear.cpp  iamf_bear_api.h
app/src/main/cpp/dep_external/src/binaural/iamf2resonance/: CMakeLists.txt  iamf2resonance.cc
app/src/main/cpp/dep_external/src/wav/: dep_wavwriter.c  dep_wavwriter.license
app/src/main/cpp/include/: vlogging_tool_sr.h
app/src/main/cpp/src/iamf_dec/: resample.license
app/src/main/java/com/example/iamf/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/iamf/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
